<resources>
    <string name="app_name">Light Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="strobe">Strobe</string>
    <string name="repeat">Repeat</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="no_alarms_set_up_yet">No alarms set up yet</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="alarm_removed">Alarm Removed</string>
    <string name="undo">Undo</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="snooze_alarm">Snooze Alarm</string>
    <string name="swipe_up_or_down">Swipe up or down</string>
    <string name="no_lights">Your device doesn\'t seem to have any flashlights. Unfortunately this app won\'t work without flashlights.</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="permission_required">Permission Required</string>
    <string name="notification_permanently_denied_message">In order for this app to work properly and notify you when the alarm has gone off the notification permission in required. Please enable notifications in app settings.</string>
    <string name="notification_permission_request_message">The notification permissions is needed to show an alert when your alarm goes off. The app will not function properly with out this permission.</string>
    <string name="notification_full_screen_message_request">In order to properly start alarms, this app needs the Full Screen Intent Permission. Please enable this in the settings.</string>
    <string name="request_again">Request again</string>
    <string name="schedule_alarm_permanently_denied_message">In order for this app to work properly as an alarm, the alarm permission in required. Please enable alarms in app settings.</string>
    <string name="schedule_alarm_permission_request_message">The alarm permission is needed in order for this app to function as an alarm clock. The app will not function properly with out this permission.</string>
</resources>
