<cash.andrew.lightalarm.AlarmListItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <TextView
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:id="@+id/alarm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:text="6:00 am"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/enable_alarm_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/alarm_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alarm_text" />

    <CheckBox
        android:id="@+id/strobe_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/strobe"
        app:layout_constraintStart_toStartOf="@+id/alarm_text"
        app:layout_constraintTop_toBottomOf="@+id/alarm_text" />

    <CheckBox
        android:id="@+id/repeat_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/repeat"
        app:layout_constraintBottom_toBottomOf="@+id/strobe_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/strobe_checkbox" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/alarm_day_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strobe_checkbox"
        app:singleLine="false"
        app:singleSelection="false"
        >

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            app:closeIconEnabled="false"
            app:checkedIconEnabled="true"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            app:checkedIconEnabled="true"
            app:closeIconEnabled="false"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            app:checkedIconEnabled="true"
            app:closeIconEnabled="false"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday"
            app:checkedIconEnabled="true"
            app:closeIconEnabled="false"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            app:checkedIconEnabled="true"
            app:closeIconEnabled="false"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            app:checkedIconEnabled="true"
            app:closeIconEnabled="false"
            />

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:id="@+id/chip_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            app:checkedIconEnabled="true"
            app:closeIconEnabled="false"
            />

    </com.google.android.material.chip.ChipGroup>

</cash.andrew.lightalarm.AlarmListItemView>
